LG-794 Audit devices, IP addresses Users are Authenticating With (#2720)
* LG-794 Audit devices, IP addresses Users are Authenticating With

**Why**: To enhance security for our users

**How**: Add new tables for devices and device events. Store a long lived cookie with a uuid which along with user id will be used as the lookup key to the device. Note that this cookie can be shared across multiple users of a device. Have the device store the browser user agent. When displaying the devices to the user use the user_agent_parser gem to parse the user agent into a user presentable string. Add device tracking to each event we want to track. If the cookie exists and its value is found for the user then update the device otherwise create one. Cache the last_ip and last_used_at timestamp in the device table. Add nullable device_id and ip to the events table. Add indexes to the tables to allow for pagination since devices or events per user can grow arbitrarily large. Create new "sign in with password" and "sign in with second factor" events. Remove login history which only retained the last and current ips through devise and did not have a sign in history.

--- a/config/locales/account/en.yml
+++ b/config/locales/account/en.yml
@@ -8,6 +8,7 @@ en:
       auth_app_disabled: not enabled
       auth_app_enabled: enabled
       authentication_app: Authentication app
+      device: "%{browser} on %{os}"
       dob: Date of birth
       email: Email address
       full_name: Full name
@@ -22,7 +23,6 @@ en:
         instructions: Your profile was recently deactivated due to a password reset.
         link: Reactivate your profile now.
       sign_in_location_and_ip: 'From %{location} (IP address: %{ip})'
-      sign_in_timestamp: "%{timestamp} ago"
       ssn: Social Security Number
       unknown_location: unknown location
       verification:
