--- a/config/locales/event_types/en.yml
+++ b/config/locales/event_types/en.yml
@@ -17,6 +17,8 @@ en:
     phone_removed: Phone number removed
     piv_cac_disabled: PIV/CAC card unassociated
     piv_cac_enabled: PIV/CAC card associated
+    sign_in_after_2fa: Signed in with second factor
+    sign_in_before_2fa: Signed in with password
     usps_mail_sent: Letter sent
     webauthn_key_added: Hardware security key added
     webauthn_key_removed: Hardware security key removed
