--- a/config/locales/headings/en.yml
+++ b/config/locales/headings/en.yml
@@ -5,7 +5,8 @@ en:
       account_history: Account history
       account_management: Account Management
       connected_apps: Applications
-      login_history: Login history
+      devices: Devices
+      events: Events
       login_info: Your account
       profile_info: Profile information
       reactivate: Reactivate your account
