--- a/config/locales/headings/fr.yml
+++ b/config/locales/headings/fr.yml
@@ -5,7 +5,8 @@ fr:
       account_history: Historique du compte
       account_management: Gestion de compte
       connected_apps: Applications
-      login_history: Historique de connexion
+      devices: Dispositifs
+      events: Événements
       login_info: Votre compte
       profile_info: Information du profil
       reactivate: Réactivez votre compte
