LG-538 New Document Authentication Design
**Why**: So our users can verify their identity on mobile phones with a camera or desktop computers with a scanned image.

**How**: Detect whether a user is one a mobile phone or a desktop.  Add new flows to accomodate desktop computers, mobile phones, desktop computers to mobile phones (ie user wants to use their camera), and mobile phones to desktop computers (ie user has a scanner).  Add image previews on document uploads.  Supply different verbiage for taking a picture vs. uploading an image.

--- a/config/locales/jobs/en.yml
+++ b/config/locales/jobs/en.yml
@@ -7,6 +7,9 @@ en:
       message: 'You''ve requested to delete your login.gov account. Your request will
         be processed in 24 hours. If you don’t want to delete your account, please
         cancel: %{cancel_link}'
+    sms_doc_auth_link_job:
+      message: 'You''ve requested to verify your identity on a mobile phone.  Please
+        sign in to %{application}: %{sp_link}'
     sms_otp_sender_job:
       login_message: "%{code} is your %{app} security code. Use this to continue signing
         in to your account. This code will expire in %{expiration} minutes."
