--- a/config/locales/doc_auth/en.yml
+++ b/config/locales/doc_auth/en.yml
@@ -20,6 +20,7 @@ en:
     headings:
       ssn: Please enter your social security number.
       take_pic_back: Take a picture of the back of your ID
+      take_pic_front: Take a picture of the front of your ID
       take_picture: Take a picture with a phone
       upload: How would you like to upload your state issued ID?
       upload_back: Upload an image of the back of your state issued ID
