--- a/config/locales/doc_auth/es.yml
+++ b/config/locales/doc_auth/es.yml
@@ -21,6 +21,7 @@ es:
     headings:
       ssn: Por favor ingrese su número de seguro social.
       take_pic_back: Take a picture of the back of your ID
+      take_pic_front: Take a picture of the front of your ID
       take_picture: Take a picture with a phone
       upload: How would you like to upload your state issued ID?
       upload_back: Cargue una foto del dorso de su identificación emitida por el estado.
