--- a/config/locales/user_mailer/en.yml
+++ b/config/locales/user_mailer/en.yml
@@ -38,6 +38,7 @@ en:
     doc_auth_link:
       message: You've requested to verify your identity on a desktop computer.  Please
         sign in to %{sp_link}
+      subject: Verify your identity on a desktop computer
     email_changed:
       help: If you did not want to change your email address, please visit the %{app}
         %{help_link} or %{contact_link}.
