--- a/config/locales/doc_auth/es.yml
+++ b/config/locales/doc_auth/es.yml
@@ -2,7 +2,10 @@
 es:
   doc_auth:
     buttons:
+      get_started: Get started
       start_over: Comenzar de nuevo
+      use_computer: Use your computer
+      use_phone: Use your phone
     errors:
       state_id_fail: Lo siento. La información de su ID emitida por el estado no coincide
         con la información de su número de seguro social.
@@ -13,18 +16,54 @@ es:
       entered_info: 'Información que ingresó:'
       first_name: Nombre de pila
       last_name: Apellido
-      option_1: 'Usuarios de computadoras de escritorio: necesita una copia escaneada
-        de su identificación. Si no tiene uno, inicie sesión desde un teléfono móvil.'
-      option_2: 'Usuarios de teléfonos móviles: puede usar su cámara o fotos de su
-        rollo de cámara.'
       ssn: Número de seguridad social
       state_id_info: 'Información de su ID emitida por el estado:'
     headings:
-      intro: Para verificar su identidad, necesitará su número de seguro social y
-        una identificación emitida por el estado.
       ssn: Por favor ingrese su número de seguro social.
+      take_pic_back: Take a picture of the back of your ID
+      take_pic_front: Take a picture of the front of your ID
+      take_picture: Take a picture with a phone
+      upload: How would you like to upload your state issued ID?
       upload_back: Cargue una foto del dorso de su identificación emitida por el estado.
+      upload_from_computer: Upload from your computer
+      upload_from_phone: Take a picture with a phone to upload your ID
       upload_front: Cargue una foto del frente de su identificación emitida por el
         estado.
+      welcome: We need to verify your identity
+    info:
+      camera_required: Your mobile phone must have a camera and a web browser
+      link_sent: Link successfully sent.  Please check your phone and follow instructions
+        to verify your identity.
+      take_picture: Use the camera on your mobile phone and upload images of your
+        ID.  We only use the images to verify your identity.
+      upload: We'll collect information about you by reading from your state-issued
+        ID.  We do not store images you upload.  We only verify your identity.
+      upload_from_computer: Upload images of your ID you have on your computer or
+        use a scanner to capture images of your ID
+      upload_from_phone: Upload pictures directly from your phone camera
+      upload_image: We only use your ID to verify your identity, and we will not save
+        any images.  We accept PDF, PNG, and JPG formats.
+      welcome: We verify your identity to make sure you are you--not someone pretending
+        to be you.  Verifying your identity also allows you to access services that
+        handle Personal Identifiable Information.
+    instructions:
+      bullet1: Upload your ID
+      bullet2: Confirm your address
+      bullet3: Secure your account
+      bullet4: Account recovery
+      email_sent: Link sent to %{email}. Please check your desktop email and follow
+        instructions to verify your identity.
+      send_sms: We'll send a text message to your device with a link.  Follow that
+        link to your browser to take pictures of the front and back of your ID.
+      take_pic: 'For best results:'
+      take_pic1: Use a dark background
+      take_pic2: Take the photo on a flat surface
+      take_pic3: Do not use the flash on your camera
+      take_pic4: Use the landscape orientation
+      text1: along with your Social Security Number
+      text2: using a phone number or mailing address
+      text3: by re-entering your login.gov password
+      text4: make sure you always have access
+      welcome: 'What you''ll need to do:'
     titles:
       doc_auth: Autenticación de documentos
