--- a/config/locales/user_mailer/fr.yml
+++ b/config/locales/user_mailer/fr.yml
@@ -36,6 +36,10 @@ fr:
         pas pour supprimer votre compte, <u>%{cancel_account_reset}</u>.
       subject: Supprimer votre compte
     contact_link_text: communiquez avec nous
+    doc_auth_link:
+      message: You've requested to verify your identity on a desktop computer.  Please
+        sign in to %{sp_link}
+      subject: Verify your identity on a desktop computer
     email_changed:
       help: Si vous préférez ne pas changer votre adresse courriel, veuillez visiter
         le %{help_link} de %{app} ou %{contact_link}.
