--- a/config/locales/doc_auth/es.yml
+++ b/config/locales/doc_auth/es.yml
@@ -2,7 +2,8 @@
 es:
   doc_auth:
     buttons:
-      change: change
+      change_address: change
+      change_ssn: change
       get_started: Get started
       start_over: Comenzar de nuevo
       use_computer: Use your computer
