--- a/config/locales/doc_auth/en.yml
+++ b/config/locales/doc_auth/en.yml
@@ -2,7 +2,8 @@
 en:
   doc_auth:
     buttons:
-      change: change
+      change_address: change
+      change_ssn: change
       get_started: Get started
       start_over: Start over
       use_computer: Use your computer
