--- a/config/locales/account/en.yml
+++ b/config/locales/account/en.yml
@@ -26,9 +26,11 @@ en:
       ssn: Social Security Number
       unknown_location: unknown location
       verification:
+        bounced: The postal service could not deliver mail to your address.
         instructions: Your account requires a secret code to be verified.
         reactivate_button: Enter the code you received via US mail
         success: Your account has been verified.
+        update_address: Please update your address to be verified.
       webauthn: Security key
       webauthn_add: "+ Add security key"
       webauthn_confirm_delete: Yes, remove key
