--- a/config/locales/account/fr.yml
+++ b/config/locales/account/fr.yml
@@ -28,9 +28,11 @@ fr:
       ssn: Numéro d'assurance sociale
       unknown_location: lieu inconnu
       verification:
+        bounced: The postal service could not deliver mail to your address.
         instructions: Votre compte requiert la vérification d'un code secret.
         reactivate_button: Entrez le code que vous avez reçu par la poste
         success: Votre compte a été vérifié.
+        update_address: Please update your address to be verified.
       webauthn: Clé de sécurité
       webauthn_add: "+ Ajouter une clé de sécurité"
       webauthn_confirm_delete: Oui, supprimer la clé
