--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -180,8 +180,10 @@ fr:
           crypte vos données pour vous assurer que personne ne peut y accéder.
         success: Ensuite, nous aurons besoin d'un numéro de téléphone.
       usps:
-        byline: Nous posterons une lettre à l'adresse vérifiée dans nos dossiers.
+        address_on_file: Nous posterons une lettre à l'adresse vérifiée dans nos dossiers.
           Celle-ci contient un code de confirmation.
+        new_address: We will mail a letter with a confirmation code to the address
+          you specify.
         resend: Envoyez-moi une autre lettre
         success: Elle devrait arriver dans 5 à 10 jours ouvrables.
     review:
