--- a/config/locales/account/es.yml
+++ b/config/locales/account/es.yml
@@ -26,8 +26,8 @@ es:
       ssn: Número de Seguro Social
       unknown_location: ubicación desconocida
       verification:
-        bounced: The postal service could not deliver mail to your address.
-        instructions: Su cuenta requiere que un código secreto sea verificado.
+        bounced: El servicio postal no pudo entregar la carta a su dirección.
+        instructions: Su cuenta requiere un código de confirmación para ser verificado.
         reactivate_button: Ingrese el código que recibió por correo postal.
         success: Su cuenta ha sido verificada.
         update_address: Please update your address to be verified.
