--- a/config/locales/account/fr.yml
+++ b/config/locales/account/fr.yml
@@ -28,8 +28,8 @@ fr:
       ssn: Numéro d'assurance sociale
       unknown_location: lieu inconnu
       verification:
-        bounced: The postal service could not deliver mail to your address.
-        instructions: Votre compte requiert la vérification d'un code secret.
+        bounced: Le service postal n'a pas pu envoyer la lettre à votre adresse.
+        instructions: Votre compte nécessite un code de confirmation pour être vérifié.
         reactivate_button: Entrez le code que vous avez reçu par la poste
         success: Votre compte a été vérifié.
         update_address: Please update your address to be verified.
