--- a/config/locales/user_mailer/en.yml
+++ b/config/locales/user_mailer/en.yml
@@ -108,7 +108,7 @@ en:
       link_text: Go to %{app}
       reset_password: If you can't remember your password, go to %{app} to reset it.
     undeliverable_address:
-      call_to_action: Please sign in to login.gov and follow instructions.
+      call_to_action: Please sign into %{link} and follow instructions.
       help: ''
-      intro: We were unable to send mail to the address you provided.
-      subject: Mail sent to your address was undeliverable
+      intro: We were unable to mail your letter to the address you provided.
+      subject: The letter sent to your address was undeliverable
