--- a/config/locales/user_mailer/fr.yml
+++ b/config/locales/user_mailer/fr.yml
@@ -116,7 +116,7 @@ fr:
       reset_password: Si vous ne vous souvenez plus de votre mot de passe, allez à
         %{app} pour le réinitialiser.
     undeliverable_address:
-      call_to_action: Veuillez vous connecter à login.gov et suivre les instructions.
+      call_to_action: Veuillez vous connecter à %{link} et suivre les instructions.
       help: ''
-      intro: Nous n'avons pas pu envoyer de courrier à l'adresse que vous avez fournie.
-      subject: Le courrier envoyé à votre adresse était non distribuable.
+      intro: Nous n'avons pas pu envoyer votre lettre à l'adresse que vous avez indiquée.
+      subject: La lettre envoyée à votre adresse était non livrable
