--- a/config/locales/user_mailer/fr.yml
+++ b/config/locales/user_mailer/fr.yml
@@ -45,6 +45,10 @@ fr:
         le %{help_link} de %{app} ou %{contact_link}.
       intro: L'adresse courriel de votre compte %{app} a été changée.
     help_link_text: Centre d'aide
+    new_device_sign_in:
+      help_html: <p>Votre compte login.gov a été connecté sur un nouvel appareil.</p><br/><br/>
+        <p><strong>%{date}<br/>%{location}</strong></p>
+      subject: Nouvelle connexion avec votre compte Login.gov
     letter_expired:
       help: ''
       info: La lettre que nous avons postée à votre adresse contient un code de confirmation
