--- a/config/locales/user_mailer/en.yml
+++ b/config/locales/user_mailer/en.yml
@@ -44,6 +44,16 @@ en:
         %{help_link} or %{contact_link}.
       intro: The email address for your %{app} account has been changed.
     help_link_text: Help Center
+    letter_expired:
+      call_to_action: Please sign in to login.gov and follow instructions.
+      help: ''
+      intro: We were unable to send mail to the address you provided.
+      subject: Mail sent to your address was undeliverable
+    letter_reminder:
+      call_to_action: Please sign in to login.gov and follow instructions.
+      help: ''
+      intro: We were unable to send mail to the address you provided.
+      subject: Mail sent to your address was undeliverable
     password_changed:
       help: If you did not make this change, please visit the %{app} %{help_link}
         or %{contact_link}.
