--- a/config/locales/account/es.yml
+++ b/config/locales/account/es.yml
@@ -26,9 +26,11 @@ es:
       ssn: Número de Seguro Social
       unknown_location: ubicación desconocida
       verification:
-        instructions: Su cuenta requiere que un código secreto sea verificado.
+        bounced: El servicio postal no pudo entregar la carta a su dirección.
+        instructions: Su cuenta requiere un código de confirmación para ser verificado.
         reactivate_button: Ingrese el código que recibió por correo postal.
         success: Su cuenta ha sido verificada.
+        update_address: Please update your address to be verified.
       webauthn: Clave de seguridad
       webauthn_add: "+ Añadir clave de seguridad"
       webauthn_confirm_delete: Si quitar la llave
