--- a/config/locales/user_mailer/fr.yml
+++ b/config/locales/user_mailer/fr.yml
@@ -53,8 +53,8 @@ fr:
       subject: La lettre que nous avons envoyée à votre adresse a un code qui a expiré
     letter_reminder:
       help: ''
-      info: Lorsque vous recevez la lettre, celle-ci contient un code secret. Utilisez
-        ce code pour terminer le processus de vérification en vous connectant à %{link}
+      info: Lorsque vous recevez la lettre, celle-ci contient un code. Utilisez ce
+        code pour terminer le processus de vérification en vous connectant à %{link}
         et en suivant les instructions.
       subject: Nous avons envoyé une lettre à l'adresse que vous avez en dossier
     password_changed:
