--- a/config/locales/user_mailer/fr.yml
+++ b/config/locales/user_mailer/fr.yml
@@ -49,13 +49,13 @@ fr:
       help: ''
       info: La lettre que nous avons envoyée à votre adresse a un code qui a expiré
         et ne peut plus être utilisée pour terminer le processus de vérification.
-        Veuillez vous connecter à %{link} et suivez les instructions.
+        Pour vérifier votre identité, vous devez vous connecter à %{link} et choisir
+        d'envoyer une autre lettre.
       subject: La lettre que nous avons envoyée à votre adresse a un code qui a expiré
     letter_reminder:
       help: ''
-      info: Lorsque vous recevez la lettre, celle-ci contient un code. Utilisez ce
-        code pour terminer le processus de vérification en vous connectant à %{link}
-        et en suivant les instructions.
+      info: Lorsque vous recevez la lettre, celle-ci contient un code. Vérifiez votre
+        identité en vous connectant à %{link} et en entrant le code.
       subject: Nous avons envoyé une lettre à l'adresse que vous avez en dossier
     password_changed:
       help: Si vous n'avez pas changé votre mot de passe, veuillez visiter le %{help_link}
