--- a/config/locales/user_mailer/en.yml
+++ b/config/locales/user_mailer/en.yml
@@ -46,15 +46,17 @@ en:
     help_link_text: Help Center
     letter_expired:
       help: ''
-      info: The letter we sent to your address has a code that expired and can no
-        longer be used to complete the verification process.  To verify your identity
-        you will need to sign into %{link} and choose to send another letter.
-      subject: The letter we sent to your address has a code that has expired
+      info: The letter we mailed to your address has a confirmation code that has
+        expired and can no longer be used to complete the verification process. To
+        verify your address and complete the identity verification process you will
+        need to sign into %{link} and request another letter.
+      subject: Your address confirmation code has expired
     letter_reminder:
       help: ''
-      info: When you receive the letter it will contain a code.  Verify your identity
-        by signing into %{link} and entering the code.
-      subject: We sent a letter to the address you have on file
+      info: The letter you are about to receive will contain a confirmation code that
+        helps us verify your address. You can complete the identity verification process
+        by signing into %{link} and entering the confirmation code.
+      subject: We mailed a letter to the address you have on file
     password_changed:
       help: If you did not make this change, please visit the %{app} %{help_link}
         or %{contact_link}.
