--- a/config/locales/user_mailer/es.yml
+++ b/config/locales/user_mailer/es.yml
@@ -46,14 +46,16 @@ es:
     help_link_text: Centro de Ayuda
     letter_expired:
       help: ''
-      info: La carta que le enviamos a su dirección tiene un código que expiró y ya
-        no puede usarse para completar el proceso de verificación. Para verificar
-        su identidad, deberá iniciar sesión en %{link} y elegir enviar otra carta.
-      subject: La carta que le enviamos a su dirección tiene un código que ha caducado
+      info: La carta que le enviamos a su dirección tiene un código de confirmación
+        que ha caducado y ya no se puede utilizar para completar el proceso de verificación.
+        Para verificar su dirección y completar el proceso de verificación de identidad,
+        deberá iniciar sesión en %{link} y solicitar otra carta.
+      subject: El código de confirmación de tu dirección ha caducado
     letter_reminder:
       help: ''
-      info: Cuando recibas la carta contendrá un código. Verifique su identidad iniciando
-        sesión en %{link} e ingresando el código.
+      info: La carta que está a punto de recibir contendrá un código de confirmación
+        que nos ayudará a verificar su dirección. Puede completar el proceso de verificación
+        de identidad iniciando sesión en %{link} e ingresando el código de confirmación.
       subject: Le enviamos una carta a la dirección que tiene archivada
     password_changed:
       help: Si no realizó este cambio, visite el %{app} %{help_link} o el %{contact_link}.
