--- a/config/locales/user_mailer/fr.yml
+++ b/config/locales/user_mailer/fr.yml
@@ -45,6 +45,21 @@ fr:
         le %{help_link} de %{app} ou %{contact_link}.
       intro: L'adresse courriel de votre compte %{app} a été changée.
     help_link_text: Centre d'aide
+    letter_expired:
+      help: ''
+      info: La lettre que nous avons postée à votre adresse contient un code de confirmation
+        arrivé à expiration et ne peut plus être utilisée pour terminer le processus
+        de vérification. Pour vérifier votre adresse et terminer le processus de vérification
+        de votre identité, vous devez vous connecter à %{link} et demander une autre
+        lettre.
+      subject: Votre code de confirmation d'adresse a expiré
+    letter_reminder:
+      help: ''
+      info: La lettre que vous êtes sur le point de recevoir contiendra un code de
+        confirmation nous permettant de vérifier votre adresse. Vous pouvez terminer
+        le processus de vérification d'identité en vous connectant à %{link} et en
+        entrant le code de confirmation.
+      subject: Nous avons envoyé une lettre à l'adresse que vous avez en dossier
     password_changed:
       help: Si vous n'avez pas changé votre mot de passe, veuillez visiter le %{help_link}
         de %{app} ou %{contact_link}.
